[gd_scene load_steps=2 format=3 uid="uid://bnaeq0jnl2qm8"]

[ext_resource type="Script" path="res://Scenes/GameMainScreenScenes/FishingScenes/BaitPage/bait_item.gd" id="1_n6fcg"]

[node name="BaitItem" type="MarginContainer"]
custom_minimum_size = Vector2(0, 95)
theme_override_constants/margin_right = 0
script = ExtResource("1_n6fcg")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 2
color = Color(0.196078, 0.196078, 0.196078, 1)

[node name="HBox" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="MC1" type="MarginContainer" parent="HBox"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBox" type="VBoxContainer" parent="HBox/MC1"]
layout_mode = 2

[node name="MC" type="MarginContainer" parent="HBox/MC1/VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="NameLabel" type="Label" parent="HBox/MC1/VBox/MC"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Oak Bait"

[node name="MC2" type="MarginContainer" parent="HBox/MC1/VBox"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 20

[node name="EffectLabel" type="Label" parent="HBox/MC1/VBox/MC2"]
custom_minimum_size = Vector2(220, 0)
layout_mode = 2
size_flags_vertical = 1
theme_override_font_sizes/font_size = 12
text = "5% fishing power"
autowrap_mode = 3

[node name="MC2" type="MarginContainer" parent="HBox"]
custom_minimum_size = Vector2(190, 0)
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBox" type="VBoxContainer" parent="HBox/MC2"]
layout_mode = 2

[node name="BuyButton" type="Button" parent="HBox/MC2/VBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Buy"

[node name="PriceLabel" type="Label" parent="HBox/MC2/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 17
text = "Price : 1000"
horizontal_alignment = 2

[node name="MC3" type="MarginContainer" parent="HBox"]
custom_minimum_size = Vector2(110, 0)
layout_mode = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 20

[node name="ColorRect" type="ColorRect" parent="HBox/MC3"]
layout_mode = 2
color = Color(0.388235, 0.388235, 0.388235, 1)

[node name="BaitCountLabel" type="Label" parent="HBox/MC3"]
layout_mode = 2
size_flags_vertical = 1
theme_override_font_sizes/font_size = 20
text = "22"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="button_down" from="HBox/MC2/VBox/BuyButton" to="." method="_on_buy_button_button_down"]
